syntax="proto3";

import "google/protobuf/empty.proto";

package grpc;
//4.
message AddUserReq {
    string id=1;
    string username=2;
    string pwd=3;
    string idkyw=4;
    int32 status=5;
    string createdBy=6;
    string createdOn=7;
    string updatedBy=8;
    string updatedOn=9;
}

message UpdateUserReq{
    string id=1;
    string username=2;
    string pwd=3;
    string idkyw=4;
    int32 status=5;
    string createdBy=6;
    string createdOn=7;
    string updatedBy=8;
    string updatedOn=9;
}

service UserService {
    rpc AddUser(AddUserReq) returns (google.protobuf.Empty) {};
    rpc UpdateUser(UpdateUserReq) returns (google.protobuf.Empty){};
}